deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hex
  name: hex
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: hex
  type: ClusterIP
